--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,8 +6,8 @@
 <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 <init-param >
 <param-name>jersey.config.server.provider.packages</param-name>
-<param-value>com.restsample,com.jersey.jaxb,com.fasterxml.jackson.jaxrs.json</param-value>
-</init-param >
+<param-value>com.restsample</param-value>
+</init-param>
 </servlet>
 <servlet-mapping>
 <servlet-name>Jersey RESTful Application</servlet-name>
